<?xml version="1.0" encoding="UTF-8"?>
<!--
	Copyright The WildFly Authors
	SPDX-License-Identifier: Apache-2.0
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.wildfly.clustering</groupId>
		<artifactId>wildfly-clustering-spring-bom</artifactId>
		<version>11.0.0.Final-SNAPSHOT</version>
		<relativePath>bom</relativePath>
	</parent>

	<artifactId>wildfly-clustering-spring</artifactId>
	<packaging>pom</packaging>

	<name>WildFly Clustering: Spring</name>

	<scm>
		<connection>scm:git:git://github.com:wildfly-clustering/wildfly-clustering-spring.git</connection>
		<developerConnection>scm:git:git@github.com:wildfly-clustering/wildfly-clustering-spring.git</developerConnection>
		<url>https://github.com/wildfly-clustering/wildfly-clustering-spring</url>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<jdk.runtime.args>--add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED</jdk.runtime.args>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>

		<!-- Provided dependency versions -->
		<version.jakarta.servlet>6.0.0</version.jakarta.servlet>
		<version.net.jcip.annotations>1.0</version.net.jcip.annotations>
		<version.org.kohsuke.metainf-services>1.11</version.org.kohsuke.metainf-services>

		<!-- Runtime dependency versions -->
		<version.io.projectreactor.core>3.6.2</version.io.projectreactor.core>
		<version.org.springframework>6.1.4</version.org.springframework>
		<version.org.springframework.security>6.2.2</version.org.springframework.security>
		<version.org.springframework.session>3.2.1</version.org.springframework.session>
		<version.org.infinispan>14.0.25.Final</version.org.infinispan>
		<version.org.jboss.marshalling>2.1.3.Final</version.org.jboss.marshalling>
		<version.org.wildfly.clustering>1.0.4.Final</version.org.wildfly.clustering>

		<!-- Test dependency versions -->
		<version.org.apache.tomcat>10.1.19</version.org.apache.tomcat>
		<version.org.jboss.arquillian>1.8.0.Final</version.org.jboss.arquillian>
		<version.org.jboss.arquillian.container.tomcat>1.1.0.Final</version.org.jboss.arquillian.container.tomcat>
		<version.org.junit>5.10.2</version.org.junit>
		<version.org.mockito>5.10.0</version.org.mockito>
		<version.org.testcontainers>1.19.4</version.org.testcontainers>
	</properties>

	<modules>
		<module>bom</module>
		<module>context</module>
		<module>security</module>
		<module>session</module>
		<module>web</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<logViolationsToConsole>true</logViolationsToConsole>
					<sourceDirectories>
						<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
						<sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
					</sourceDirectories>
				</configuration>
				<executions>
					<execution>
						<id>check-sources</id>
						<phase>process-sources</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
					<execution>
						<id>check-test-sources</id>
						<phase>process-test-sources</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<configuration>
					<artifactItems>
						<artifactItem>
							<groupId>${project.groupId}</groupId>
							<artifactId>${project.artifactId}</artifactId>
							<version>${project.version}</version>
						</artifactItem>
					</artifactItems>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
						<configuration>
							<skipIfEmpty>true</skipIfEmpty>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>${jdk.runtime.args}</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<!-- Provided dependencies -->
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>${version.jakarta.servlet}</version>
			</dependency>

			<!-- BOM dependencies -->
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-bom</artifactId>
				<version>${version.org.infinispan}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${version.org.springframework}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-bom</artifactId>
				<version>${version.org.springframework.security}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.session</groupId>
				<artifactId>spring-session-bom</artifactId>
				<version>${version.org.springframework.session}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.wildfly.clustering</groupId>
				<artifactId>wildfly-clustering-bom</artifactId>
				<version>${version.org.wildfly.clustering}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- External compile dependencies -->
			<dependency>
				<groupId>io.projectreactor</groupId>
				<artifactId>reactor-core</artifactId>
				<version>${version.io.projectreactor.core}</version>
			</dependency>
			<dependency>
				<groupId>org.kohsuke.metainf-services</groupId>
				<artifactId>metainf-services</artifactId>
				<version>${version.org.kohsuke.metainf-services}</version>
			</dependency>

			<!-- Test BOM dependencies -->
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>${version.org.jboss.arquillian}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${version.org.junit}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-bom</artifactId>
				<version>${version.org.mockito}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${version.org.testcontainers}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>tomcat-catalina</artifactId>
				<version>${version.org.apache.tomcat}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian.container</groupId>
				<artifactId>arquillian-tomcat-managed-8</artifactId>
				<version>${version.org.jboss.arquillian.container.tomcat}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.marshalling</groupId>
				<artifactId>jboss-marshalling-river</artifactId>
				<version>${version.org.jboss.marshalling}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
